--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,28 @@
 # Title of your blog; shows in the header
-name: "hikari"
+name: "FrontUx"
 
 # Description of your content (will only be used on Google Search)
-description: "Fluid, responsive blog theme for Jekyll"
+description: "Meet'up - Designer end Front-end"
 
 # Your name. Will show in your footer + sidebar 
-author: "John Doge"
+author: "FrontUx team"
 
-url: "http://m3xm.github.io"
-baseurl: "/hikari-for-Jekyll"
+url: "http://frontux.com"
+baseurl: "/"
 
 # A short presentation of yourself. Will show in the sidebar, under your name. Best usage would be between 30 to 50 words. 
 author-bio: "I'm a dog. I develop things. This is my blog so why don't you close this damn side panel (cursed by most UX Designers but I don't care, I do whatever I want) and start reading my awesome stuff?"
 
 # Social Accounts (mine, as placeholders)
 
-twitter: mx3m
-github: m3xm
-dribbble: m3xm
-instagram: m3xm
+twitter: frontux
+github: frontux
+dribbble: frontyx
+instagram: fronx
 
 # Google Analytics (you may want to changes these with yours or even delete :)
 
-ga_domain: m3xm.github.io
+ga_domain: fronux.com
 ga_tracking_id: UA-47727049-1
 
 # Other (refer to http://jekyllrb.com/docs/home/ for further details on the below)
