--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: "Meet'up - Designer end Developers"
 author: "FrontUx team"
 
 url: "http://frontux.com"
-baseurl: "/"
+baseurl: ""
 
 # A short presentation of yourself. Will show in the sidebar, under your name. Best usage would be between 30 to 50 words. 
 author-bio: "Meetup para reunir Designers e Developers e discutir assuntos para melhor o flow de trabalho de ambas as áreas"
