Info do primeiro meetup

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ name: "FrontUx"
 description: "Meet'up - Designer end Developers"
 
 # Your name. Will show in your footer + sidebar 
-author: "FrontUx team"
+author: "FrontUx"
 
 url: "http://frontux.com"
 baseurl: ""
