Correção de texto

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ url: "http://frontux.com"
 baseurl: ""
 
 # A short presentation of yourself. Will show in the sidebar, under your name. Best usage would be between 30 to 50 words. 
-author-bio: "Meetup para reunir Designers e Developers e discutir assuntos para melhor o flow de trabalho de ambas as áreas"
+author-bio: "Meetup para reunir Designers e Developers e discutir assuntos para melhorar o fluxo de trabalho de ambas as áreas"
 
 # Social Accounts (mine, as placeholders)
 
