Corr~eção de texto

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 name: "FrontUx"
 
 # Description of your content (will only be used on Google Search)
-description: "Meet'up - Designer end Developers"
+description: "Meet'up - Designers end Developers"
 
 # Your name. Will show in your footer + sidebar 
 author: "FrontUx"
